[package]
name = "pdf2image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.0"
image = { version = "0.25.1", default-features = false, features = ["rayon", "jpeg"] }
rayon = "1.10.0"
thiserror = "1.0.59"
